--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "axios": "^1.6.1"
+    "axios": "^1.6.1",
+    "react": "^15.3.0"
   }
 }
